--- a/ChattingApp/app/src/main/res/layout/detail_send_msg.xml
+++ b/ChattingApp/app/src/main/res/layout/detail_send_msg.xml
@@ -3,15 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp">
 
+        <TextView
+            android:id="@+id/text_gchat_date_right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="8dp"
+            android:paddingTop="4dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="4dp"
+            android:text="2021년 10월 15일"
+            android:textSize="10sp"
+            android:visibility="visible"
+            android:textColor="#C0C0C0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_gchat_send_massage"
@@ -23,7 +34,8 @@
             app:cardPreventCornerOverlap="false"
             app:cardUseCompatPadding="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_gchat_date_right">
             <!--            app:layout_constraintTop_toBottomOf="@id/text_gchat_date_me">-->
 
             <LinearLayout
