--- a/Web/src/main/resources/templates/client/client_list.html
+++ b/Web/src/main/resources/templates/client/client_list.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="container-fluid">
-        <div class="search">
+        <form th:action="@{/client/search}" method="get" class="search">
 
             <div class="form-check form-check-inline" style="margin-top:5px;">
                 <input class="form-check-input" type="checkbox" id="corp_available" value="option1">
@@ -50,18 +50,13 @@
 
             <div class="form-group" style="float:right;">
                 <div class="input-group">
-                    <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button" data-bs-toggle="dropdown" aria-expanded="false">기업명</button>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">가나소프트</a></li>
-                        <li><a class="dropdown-item" href="#">알파시티</a></li>
-                    </ul>
-                    <input type="text" class="form-control form-control-sm" id="corp_search" placeholder="고객 이름으로 검색">
+                    <input type="text" name="keyword" class="form-control form-control-sm" id="corp_search" placeholder="고객 이름으로 검색">
                     <div class="input-group-append">
                         <button class="btn btn-warning btn-sm" type="submit" id="">검색</button>
                     </div>
                 </div>
             </div>
-        </div>
+        </form>
 
         <table class="table table-striped table-hover">
             <thead class="thead-dark">
@@ -75,14 +70,16 @@
             </tr>
             </thead>
             <tbody >
-            <tr th:each="client: ${clients}">
-                <td th:text="${client.client_no}" scope="row">고객No</td>
-                <td><a href="#" th:text="${client.client_name}" th:href="@{/client/{clientNo}(clientNo=${client.client_no})}" >상담내역</a></td>
-                <td th:text="${client.client_email}" >고객 이메일</td>
-                <td th:text="${client.client_gender}">고객 성별</td>
-                <td th:text="${client.date}">가입일</td>
-                <td th:text="${client.client_status}">상태</td>
-            </tr>
+            <div th:each="client: ${clients}">
+                <tr th:onclick="|location.href='@{/client/{clientNo}(clientNo=${client.client_no})}'|" style="cursor:pointer;">
+                    <td th:text="${client.client_no}">고객No</td>
+                    <td th:text="${client.client_name}">상담이름</td>
+                    <td th:text="${client.client_email}" >고객 이메일</td>
+                    <td th:text="${client.client_gender}">고객 성별</td>
+                    <td th:text="${client.date}">가입일</td>
+                    <td th:text="${client.client_status}">상태</td>
+                </tr>
+            </div>
             </tbody>
         </table>
 
