--- a/Web/src/main/resources/templates/corporation/corp_list.html
+++ b/Web/src/main/resources/templates/corporation/corp_list.html
@@ -33,28 +33,27 @@
         <h3 style="text-align:left;">기업목록</h3>
     </div>
     <div class="container-fluid">
-        <div class="search">
-
+        <form th:action="@{/corporation/search}" method="get" class="search">
             <div class="form-check form-check-inline" style="margin-top:5px;">
-                <input class="form-check-input" type="checkbox" id="corp_available" value="option1">
+                <input class="form-check-input" name="available" type="checkbox" id="corp_available" value=1>
                 <label class="form-check-label" for="corp_available">사용 중</label>
             </div>
             <div class="form-check  form-check-inline" style="margin-top:5px;">
-                <input class="form-check-input" type="checkbox" id="corp_stop" value="option2">
+                <input class="form-check-input" name="unavailable" type="checkbox" id="corp_stop" value=0>
                 <label class="form-check-label" for="corp_stop">사용 정지</label>
             </div>
 
             <div class="form-group" style="float:right;">
-                <form th:action="@{/corporation/}" method="post" class="input-group">
-                    <input type="text" name="corpSearch" class="form-control form-control-sm" id="corp_search" placeholder="기업명으로 검색">
+                <div class="input-group">
+                    <input type="text" name="keyword" class="form-control form-control-sm" id="corp_search" placeholder="기업명으로 검색">
                     <div class="input-group-append">
                         <button class="btn btn-warning btn-sm" type="submit" id="">검색</button>
                     </div>
-                </form>
+                </div>
             </div>
-        </div>
+        </form>
 
-        <table class="table table-striped">
+        <table class="table table-striped table-hover">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col">No</th>
@@ -66,15 +65,16 @@
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="corp: ${corps}">
-                    <td th:text="${corp.corp_no}">순서</td>
-                    <td><a href="#" th:href="@{/corporation/{corpId}(corpId=${corp.corp_no})}" th:text="${corp.corp_name}">기업명</a>
-                    </td>
-                    <td th:text="${corp.corp_phone}">연락처</a></td>
-                    <td th:text="${corp.corp_admin}">대표자</a></td>
-                    <td th:text="${corp.created_at}">등록일자</a></td>
-                    <td th:text="${corp.corp_status}">상태</td>
-                </tr>
+                <div th:each="corp: ${corps}">
+                    <tr th:onclick="|location.href='@{/corporation/{corpId}(corpId=${corp.corp_no})}'|" style="cursor:pointer;">
+                        <td th:text="${corp.corp_no}">순서</td>
+                        <td th:text="${corp.corp_name}">기업명</td>
+                        <td th:text="${corp.corp_phone}">연락처</td>
+                        <td th:text="${corp.corp_admin}">대표자</td>
+                        <td th:text="${corp.created_at}">등록일자</td>
+                        <td th:text="${corp.corp_status}">상태</td>
+                    </tr>
+                </div>
             </tbody>
         </table>
         <div class="corp_page">
